# poolui

./: .arcconfig  CMakeLists.txt  CommandExecutingButton.cpp  CommandExecutingButton.hpp  DHCPConfigurator.cpp  DHCPConfigurator.hpp  Doxyfile  MonitoringTab.cpp  MonitoringTab.hpp  README.md  SSHClient.cpp  SSHClient.hpp  SystemTab.cpp  SystemTab.hpp  ThinclientAdd.cpp  ThinclientAdd.hpp  ThinclientTab.cpp  ThinclientTab.hpp  iSCSIConfigurator.cpp  iSCSIConfigurator.hpp  iSCSIInfo.cpp  iSCSIInfo.hpp  key_to_command  main.cpp  run_example.sh  ssh.h  ssh_authentication.cpp  ssh_remote_execution.cpp  utility.hpp  web_ui.cpp  web_ui.h  wt_config.xml
approot/: text.xml
serversetup/: checkService.sh  clientshutdown.sh  controller.sh  deleteDHCP.sh  deleteISCSITARGETS.sh  findimage.sh  findmount.sh  getBackupfromServer.sh  regenerate_dhcp.sh  regenerate_targets.sh
serversetup/backup/: controller.sh-bkp230417  controller.sh_300317
serversetup/dhcp/: .testfolder.sh.swp  dhcp-options  testfolder.sh
serversetup/dhcp/generatefiles/01_options/: 001_options  002_subnet
serversetup/dhcp/generatefiles/02_hosts/: 003_nuci5  004_nuci5  005_compus09  005_nuci51
serversetup/dhcp/generatefiles/03_EOF/: 999_EOF
serversetup/targets/001_target/: 001_iqn  003_auth
serversetup/targets/001_target/002_luns/: 000_lun
serversetup/targets/002_target/: 001_iqn  003_auth
serversetup/targets/003_target/: 001_iqn
serversetup/targets/004_target/: 001_iqn
serversetup/targets/005_target/: 001_iqn
serversetup/targets/006_target/: 001_iqn
serversetup/thinclients/: inventar
(+4 files in other folders)
